# python-docker

./: .gitignore  AfterAllowTraffic.sh  README.md  api.sh  appspec.yaml  buildspec-cdk.yaml  buildspec-docker.yaml  buildspec-tag.yaml  buildspec.yaml  docker-compose.yaml  docker-prod-image-build.sh  memo.md  mergeable.js  package.json  post-build.js  pullrequest.ts  taskdef.json
.devcontainer/: devcontainer.json
app/: .env  Dockerfile  pyproject.toml
app/src/util/: hello.py
app/src/web/: app.py
app/tests/: test_hello.py
cdk/: cdk.json  package-lock.json
cdk/lib/: certificate-stack.ts  ecr-stack.ts  ecs-cluster-stack.ts  ecs-service-stack.ts  ecs_patterns.txt  iam-stack.ts  pipeline-stack.ts  rds-stack.ts  route53-stack.ts  vpc-stack.ts
cdk/variables/: allow-ips.ts
lib/: python-docker-stack.ts
test/: python-docker.test.ts
